# RenderArchitecture

./: CMakeLists.txt  README.md  RenderArchitecture.sln
Source/Editor/: Editor.csproj  Game.cs  IGame.cs  Program.cs
Source/Editor/Native/: Engine.Native.cs  Engine.Structs.cs  Engine.cs
Source/Engine/: CMakeLists.txt
Source/Engine/Private/: Engine.cpp  EngineAppIcon.hpp
Source/Engine/Public/: Compiler.hpp  Engine.hpp
